--- a/task-management/requirements.txt
+++ b/task-management/requirements.txt
@@ -36,3 +36,7 @@ tqdm==4.67.1
 types-python-dateutil==2.9.0.20250516
 tzdata==2025.2
 urllib3==2.5.0
+tabulate==0.9.0
+django-extensions==4.1
+ipython==9.3.0
+ptpython==3.0.30
