--- a/django_rest/requirements.txt
+++ b/django_rest/requirements.txt
@@ -1,44 +1,8 @@
-arrow==1.3.0
 asgiref==3.8.1
-binaryornot==0.4.4
-certifi==2025.6.15
-chardet==5.2.0
-charset-normalizer==3.4.2
-click==8.2.1
-colorama==0.4.6
-cookiecutter==2.6.0
 Django==5.1.5
-django-active-link==0.2.2
-django-browser-reload==1.18.0
-django-tailwind==4.0.1
-django-widget-tweaks==1.5.0
-djangorestframework==3.15.2
-idna==3.10
-Jinja2==3.1.6
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-MouseInfo==0.1.3
-PyAutoGUI==0.9.54
-PyGetWindow==0.0.9
-Pygments==2.19.1
-PyMsgBox==1.0.9
-pyperclip==1.9.0
-PyRect==0.2.0
-PyScreeze==1.0.1
-python-dateutil==2.9.0.post0
-python-decouple==3.8
-python-slugify==8.0.4
-pytweening==1.2.0
-PyYAML==6.0.2
-requests==2.32.4
-rich==14.0.0
-six==1.17.0
 sqlparse==0.5.3
-text-unidecode==1.3
-types-python-dateutil==2.9.0.20250516
-tzdata==2025.2
-urllib3==2.5.0
-django-admin-interface==0.30.1
-django-colorfield==0.11.0
+djangorestframework==3.15.2
 django-debug-toolbar==4.4.6
+Pillow==10.4.0
+django-admin-interface==0.29.1
+django-colorfield==0.11.0
